Improve snapshot creation process